--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
     <title>React App</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,500,900" rel="stylesheet">
   </head>
   <body>
